# case-conference

./: .gitignore  Dockerfile  Makefile  README.md  app.py  docker-compose.yml  env.example  environment.yml  mypy.ini  pyproject.toml
agents/: agent.py
api/clinical_trials/: clinical_trials.py
data/: data.csv  init.sql
database/: connection.py  models.py
llm/: openai_api.py
pdf/: pdf_converter.py
prompt/: medical_review_board.py
